@@ -122,13 +122,13 @@ class BuildDistOSX(bdist):
                 (os.path.join(cwd, "LICENSE.txt"),
                  os.path.join(osx_pkg_resrc, "License.txt")),
                 (os.path.join(cwd, "README.txt"),
-                 os.path.join(data_path, "ReadMe_Utilities.txt")),
+                 os.path.join(data_path, "README_Utilities.txt")),
                 (os.path.join(cwd, "CHANGES.txt"),
                  os.path.join(data_path, "CHANGES_Utilities.txt")),
                 (os.path.join(cwd, "LICENSE.txt"),
-                 os.path.join(data_path, "License.txt")),
+                 os.path.join(data_path, "LICENSE.txt")),
                 (os.path.join(cwd, "README_Fabric.txt"),
-                 os.path.join(data_path, "ReadMe_Fabric.txt")),
+                 os.path.join(data_path, "README_Fabric.txt")),
                 (os.path.join(cwd, "CHANGES_Fabric.txt"),
                  os.path.join(data_path, "CHANGES_Fabric.txt"))
             ]
@@ -140,13 +140,13 @@ class BuildDistOSX(bdist):
                 (os.path.join(cwd, com_path, "LICENSE_com.txt"),
                  os.path.join(osx_pkg_resrc, "License.txt")),
                 (os.path.join(cwd, com_path, "README_com.txt"),
-                 os.path.join(data_path, "ReadMe.txt")),
+                 os.path.join(data_path, "README_com.txt")),
                 (os.path.join(cwd, com_path, "LICENSE_com.txt"),
-                 os.path.join(data_path, "License.txt")),
+                 os.path.join(data_path, "LICENSE_com.txt")),
                 (os.path.join(cwd, "CHANGES.txt"),
                  os.path.join(data_path, "CHANGES_Utilities.txt")),
-                (os.path.join(cwd, "README_Fabric.txt"),
-                 os.path.join(data_path, "ReadMe_Fabric.txt")),
+                (os.path.join(cwd, "README_Fabric_com.txt"),
+                 os.path.join(data_path, "README_Fabric_com.txt")),
                 (os.path.join(cwd, "CHANGES_Fabric.txt"),
                  os.path.join(data_path, "CHANGES_Fabric.txt"))
             ]
